Motion Blur Bug when Rendering #40031

Closed
opened 2014-05-05 15:07:11 +02:00 by Vlad Mafteiu Scai · 8 comments

System Information
Win 8 64, 2x MSI 780 Lightning

2.70
Broken: (3cfab89, see splash screen)

Motion Blur renders in normal time for most frames however in some it seems to slow down to a halt and everything is rendered transparent.

Exact steps for others to reproduce the error
Render last frame from scene 2 in blend file. Happens in some of the other scenes as well at random frame numbers.Ex1.blend
Sample Image.
Transparentx.png

**System Information** Win 8 64, 2x MSI 780 Lightning **2.70** Broken: (3cfab89, see splash screen) Motion Blur renders in normal time for most frames however in some it seems to slow down to a halt and everything is rendered transparent. **Exact steps for others to reproduce the error** Render last frame from scene 2 in blend file. Happens in some of the other scenes as well at random frame numbers.[Ex1.blend](https://archive.blender.org/developer/F86986/Ex1.blend) Sample Image. ![Transparentx.png](https://archive.blender.org/developer/F86988/Transparentx.png)

Changed status to: 'Open'

Changed status to: 'Open'
Brecht Van Lommel was assigned by Vlad Mafteiu Scai 2014-05-05 15:07:11 +02:00

Added subscriber: @00Ghz

Added subscriber: @00Ghz

This issue was referenced by blender/blender-addons-contrib@7a2ece3c19

This issue was referenced by blender/blender-addons-contrib@7a2ece3c19708b3633b743d2545560d76fd5d9b4

This issue was referenced by 7a2ece3c19

This issue was referenced by 7a2ece3c19708b3633b743d2545560d76fd5d9b4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7a2ece3c19.

Closed by commit 7a2ece3c19.

So what was going on?

So what was going on?

One the last frame of the animation the earlier frames have deformation, but the next frame does not. It was not handling that case correctly.

One the last frame of the animation the earlier frames have deformation, but the next frame does not. It was not handling that case correctly.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40031
No description provided.