Fix T40031: cycles deformation motion blur wrong render on last frame of animation.